force-app/main/default/objects/CI_Configuration__c/CI_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration - Name is the namespace for this config objects</description>
    <label>CI Configuration</label>
</CustomObject>