force-app/main/default/objects/CI_Configuration__c/fields/Archive_Days__c.field-meta.xml
<CustomField>
    <fullName>Archive_Days__c</fullName>
    <defaultValue>14</defaultValue>
    <description>Number of days to archive test and test summary results</description>
    <label>Archive Days</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>