force-app/main/default/objects/CI_Configuration__c/fields/Last_Test_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_Test_Request__c</fullName>
    <description>Date/Time of last time tests were requested to run</description>
    <inlineHelpText>Date/Time of last time tests were requested to run - set by system</inlineHelpText>
    <label>Last Test Request</label>
    <type>DateTime</type>
</CustomField>