force-app/main/default/objects/CI_Configuration__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>Email address of user to notify in case of error</description>
    <inlineHelpText>Email address of user to notify in case of error</inlineHelpText>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>