force-app/main/default/objects/CI_Configuration__c/fields/Test_Delay__c.field-meta.xml
<CustomField>
    <fullName>Test_Delay__c</fullName>
    <description># of hours to wait before running test again</description>
    <label>Test Delay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>